--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /taype-driver-emp
 /taype-driver-plaintext
 /taype-vscode
+/taype.tar.xz
+/taype-driver-emp.tar.xz
+/taype-driver-plaintext.tar.xz
+/taype-vscode.tar.xz
+/taype-image-*.tar.xz
