--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 /taype-driver-emp
 /taype-driver-plaintext
 /taype-vscode
-/oadt
+/taype-theories
 /taype.tar.xz
 /taype-driver-emp.tar.xz
 /taype-driver-plaintext.tar.xz
 /taype-vscode.tar.xz
-/oadt.tar.xz
+/taype-theories.tar.xz
 /taype-image-*.tar.xz
