--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
-/taype
-/taype-driver-emp
-/taype-driver-plaintext
+/taypsi
+/taype-drivers
 /taype-vscode
-/taype-theories
-/taype.tar.xz
-/taype-driver-emp.tar.xz
-/taype-driver-plaintext.tar.xz
+/taypsi-theories
+/taype-pldi
+/taype-sa
+/taype-drivers-legacy
+/taypsi.tar.xz
+/taype-drivers.tar.xz
 /taype-vscode.tar.xz
-/taype-theories.tar.xz
-/taype-image-*.tar.xz
+/taypsi-theories.tar.xz
+/taype-pldi.tar.xz
+/taype-sa.tar.xz
+/taype-drivers-legacy.tar.xz
+/taypsi-image-*.tar.xz
